alignment issues with the playlist song section solved

--- a/components/playlistSong.module.css
+++ b/components/playlistSong.module.css
@@ -54,4 +54,5 @@
 .firstInfo{
     display: flex;
     align-items: center;
+    width: 0.5rem;
 }
